[tool.poetry]
name = "af"
version = "0.1.0"
description = ""
authors = ["jongsoobae <ocpek@nate.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pre-commit = "^2.1.0"
django-allauth = "^0.41.0"
django = "^3.0.3"
python-decouple = "^3.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
